--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ Thumbs.db
 *.jar
 *.war
 *.ear
+.idea
+*.iml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
