--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 permalink: /:categories/:year/:month/:day/:title
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
-highlighter: rouge
+highlighter: pygments
 encoding: utf-8
 
 defaults:
