--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ permalink: /:categories/:year/:month/:day/:title
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 # pygments, rouge
-highlighter: pygments
+highlighter: rouge
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
@@ -140,5 +140,5 @@ JB :
   posts_collate:
     provider: "custom"
 
-paginate: 5
+paginate: 10
 paginate_path: "/blog/page:num/"
